configuración del routing

--- a/src/app/shared/navegacion/navegacion.component.html
+++ b/src/app/shared/navegacion/navegacion.component.html
@@ -26,7 +26,6 @@
       <mat-icon>account_circle</mat-icon>
     </mat-toolbar>
     <!-- Add Content Here -->
-    <!-- <app-empresas-formulario></app-empresas-formulario> -->
-    <app-empresas-tabla></app-empresas-tabla>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
