--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-navegacion></app-navegacion>
+<!-- <app-navegacion></app-navegacion> -->
 <!-- <router-outlet></router-outlet> -->
+
+<div class="fondo">
+
+    <app-login></app-login>
+
+</div>
