--- a/src/app/shared/navegacion/navegacion.component.html
+++ b/src/app/shared/navegacion/navegacion.component.html
@@ -3,7 +3,9 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'push' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>
+      <img src="https://i.imgur.com/nOLl4iZ.png" alt="logo" width="80%" />      
+    </mat-toolbar>
     <!-- <mat-nav-list>
       <a mat-list-item href="#">Link 1</a>
       <a mat-list-item href="#">Link 2</a>
