Cambio de los formularios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
 <!-- <app-navegacion></app-navegacion> -->
-<!-- <router-outlet></router-outlet> -->
-
-<div class="fondo">
-
-    <app-login></app-login>
-
-</div>
+<router-outlet></router-outlet>
