--- a/src/app/equipos/equipos-formulario/equipos-formulario.component.html
+++ b/src/app/equipos/equipos-formulario/equipos-formulario.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (change)="onChange();" (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Información del Equipo</mat-card-title>
@@ -52,7 +52,7 @@
       </div>      
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Submit</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="botonDeshabilitado" >Enviar</button>
     </mat-card-actions>
   </mat-card>
 </form>
