--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,53 +1,62 @@
+<div class="fondo">
 
-<div class="row">
-  <div class="col">
-    <app-banner></app-banner>
-  </div>
-  <div class="col">
-    <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-      <mat-card class="shipping-card">
-        <mat-card-header>
-          <mat-card-title>Login</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <div class="row">
-            <div class="col">
-              <mat-form-field class="full-width">
-                <input matInput placeholder="Company" formControlName="company">
-              </mat-form-field>
+  <div class="row">
+    <div class="col">
+      <app-banner></app-banner>
+    </div>
+    <div class="col">
+      <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+        <mat-card class="shipping-card">
+          <mat-card-header>
+            <mat-card-title>Login</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <div class="row">
+              <div class="col">
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Usuario" formControlName="username">
+                  <mat-error *ngIf="addressForm.controls['username'].hasError('required')">
+                    El usuario es <strong>requerido</strong>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>     
+            <div class="row">        
+              <div class="col">
+                <mat-form-field class="full-width">
+                  <mat-select placeholder="Rol" formControlName="role">
+                    <mat-option *ngFor="let state of states" [value]="state.abbreviation">
+                      {{ state.name }}
+                    </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="addressForm.controls['role'].hasError('required')">
+                   El role es <strong>requerido</strong>
+                  </mat-error>
+                </mat-form-field>
+              </div>
             </div>
-          </div>     
-          <div class="row">        
-            <div class="col">
-              <mat-form-field class="full-width">
-                <mat-select placeholder="State" formControlName="state">
-                  <mat-option *ngFor="let state of states" [value]="state.abbreviation">
-                    {{ state.name }}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="addressForm.controls['state'].hasError('required')">
-                  State is <strong>required</strong>
-                </mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-    
-          <div class="row">
-            <div class="col">
-              <mat-form-field class="full-width">
-                <input matInput placeholder="Company" formControlName="company">
-              </mat-form-field>
-            </div>
-          </div>         
-        </mat-card-content>
-        <button mat-raised-button color="primary" type="submit">Submit</button>   
-      </mat-card>
-    </form>
-    
+      
+            <div class="row">
+              <div class="col">
+                <mat-form-field class="full-width">
+                  <input type="password" matInput placeholder="Contraseña" formControlName="password">
+                  <mat-error *ngIf="addressForm.controls['password'].hasError('required')">
+                    La contraseña es <strong>requerida</strong>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>         
+          </mat-card-content>
+          <button mat-raised-button color="primary" type="submit">Ingresar</button>   
+        </mat-card>
+      </form>
+      
+    </div>
+    <div class="col">
+      <app-banner></app-banner>
+    </div>
   </div>
-  <div class="col">
-    <app-banner></app-banner>
-  </div>
-</div>
+
+</div>  
 
 
