--- a/src/app/mantenimientos/mantenimientos-formulario/mantenimientos-formulario.component.html
+++ b/src/app/mantenimientos/mantenimientos-formulario/mantenimientos-formulario.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (change)="onChange();" (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Información del mantenimiento</mat-card-title>
@@ -53,7 +53,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">        
+      <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
             <mat-select placeholder="Técnico" formControlName="tecnico">
@@ -79,7 +79,7 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Submit</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="botonDeshabilitado">Enviar</button>
     </mat-card-actions>
   </mat-card>
 </form>
