--- a/src/app/empleados/empleados-tabla/empleados-tabla.component.html
+++ b/src/app/empleados/empleados-tabla/empleados-tabla.component.html
@@ -15,15 +15,15 @@
         </ng-container>
     
         <!-- Nombre Column -->
-        <ng-container matColumnDef="nombre">
+        <ng-container matColumnDef="nombre_completo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
-          <td mat-cell *matCellDef="let row">{{row.nombre}}</td>
+          <td mat-cell *matCellDef="let row">{{row.nombre_completo}}</td>
         </ng-container>
 
         <!-- Correo Column -->
-        <ng-container matColumnDef="correo">
+        <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Correo</th>
-          <td mat-cell *matCellDef="let row">{{row.correo}}</td>
+          <td mat-cell *matCellDef="let row">{{row.email}}</td>
         </ng-container>
 
         <!-- Teléfono Column -->
