--- a/src/app/empresas/empresas-tabla/empresas-tabla.component.html
+++ b/src/app/empresas/empresas-tabla/empresas-tabla.component.html
@@ -1,9 +1,9 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title><h1>Lista de Empresas</h1></mat-card-title>
+    <mat-card-title>Lista de Empresas</mat-card-title>
   </mat-card-header>  
   <mat-card-content>
-    <div class="mat-elevation-z8" style="width: 90%; margin: auto; ">
+    <div class="mat-elevation-z8">
       <table mat-table class="full-width-table" matSort aria-label="Elements">
         <!-- Id Column -->
         <ng-container matColumnDef="id">
@@ -18,15 +18,15 @@
         </ng-container>
   
         <!-- Nombre Column -->
-        <ng-container matColumnDef="nombre">
+        <ng-container matColumnDef="razon_social">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
-          <td mat-cell *matCellDef="let row">{{row.nombre}}</td>
+          <td mat-cell *matCellDef="let row">{{row.razon_social}}</td>
         </ng-container>
   
         <!-- Correo Column -->
-        <ng-container matColumnDef="correo">
+        <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Correo</th>
-          <td mat-cell *matCellDef="let row">{{row.correo}}</td>
+          <td mat-cell *matCellDef="let row">{{row.email}}</td>
         </ng-container>
   
         <!-- Teléfono Column -->
@@ -61,9 +61,9 @@
           [length]="dataSource?.data?.length"
           [pageIndex]="0"
           [pageSize]="5"
-          [pageSizeOptions]="[5, 10, 20]"
+          [pageSizeOptions]="[5, 10, 30]"
           aria-label="Select page">
       </mat-paginator>
-    </div>
+    </div>    
   </mat-card-content>  
 </mat-card>
