--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,5 +1,5 @@
 .fondo {
-  background-color: royalblue;
+  background-color: #7b1fa2;
   margin-top: 10%;
   margin-bottom: 0;
   position: absolute;
