Agregar datos a las tablas

--- a/src/app/equipos/equipos-tabla/equipos-tabla.component.html
+++ b/src/app/equipos/equipos-tabla/equipos-tabla.component.html
@@ -26,9 +26,9 @@
         </ng-container>
 
         <!-- Serial Column -->
-        <ng-container matColumnDef="serial">
+        <ng-container matColumnDef="numero_serial">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Serial</th>
-          <td mat-cell *matCellDef="let row">{{row.serial}}</td>
+          <td mat-cell *matCellDef="let row">{{row.numero_serial}}</td>
         </ng-container>
 
         <!-- Modelo Column -->
