--- a/src/app/empleados/empleados-formulario/empleados-formulario.component.html
+++ b/src/app/empleados/empleados-formulario/empleados-formulario.component.html
@@ -7,8 +7,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Nombre del empleado" formControlName="nombre">
-            <mat-error *ngIf="addressForm.controls['nombre'].hasError('required')">
+            <input matInput placeholder="Nombre del empleado" formControlName="nombre_completo">
+            <mat-error *ngIf="addressForm.controls['nombre_completo'].hasError('required')">
               El nombre del empleado es <strong>requerido</strong>
             </mat-error>
           </mat-form-field>
@@ -17,8 +17,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Correo" formControlName="correo">
-            <mat-error *ngIf="addressForm.controls['correo'].hasError('required')">
+            <input matInput placeholder="Correo" formControlName="email">
+            <mat-error *ngIf="addressForm.controls['email'].hasError('required')">
               El correo es <strong>requerido</strong>
             </mat-error>
           </mat-form-field>
