--- a/src/app/mantenimientos/mantenimientos-tabla/mantenimientos-tabla.component.html
+++ b/src/app/mantenimientos/mantenimientos-tabla/mantenimientos-tabla.component.html
@@ -18,15 +18,15 @@
         </ng-container>
 
         <!-- Fecha Ingreso Column -->
-        <ng-container matColumnDef="ingreso">
+        <ng-container matColumnDef="fecha_entrada">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha Ingreso</th>
-          <td mat-cell *matCellDef="let row">{{row.ingreso}}</td>
+          <td mat-cell *matCellDef="let row">{{row.fecha_entrada}}</td>
         </ng-container>
 
         <!-- Fecha salida Column -->
-        <ng-container matColumnDef="salida">
+        <ng-container matColumnDef="fecha_salida">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha salida</th>
-          <td mat-cell *matCellDef="let row">{{row.salida}}</td>
+          <td mat-cell *matCellDef="let row">{{row.fecha_salida}}</td>
         </ng-container>
 
         <!-- Estado Column -->
@@ -42,9 +42,9 @@
         </ng-container>
 
         <!-- Tecnico Column -->
-        <ng-container matColumnDef="tecnico">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tecnico</th>
-          <td mat-cell *matCellDef="let row">{{row.tecnico}}</td>
+        <ng-container matColumnDef="empleado">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Empleado</th>
+          <td mat-cell *matCellDef="let row">{{row.empleado}}</td>
         </ng-container>
 
         <!-- Observaciones Column -->
