--- a/src/app/empleados/empleados-formulario/empleados-formulario.component.html
+++ b/src/app/empleados/empleados-formulario/empleados-formulario.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (change)="onChange()" (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Formulario Empleados</mat-card-title>
@@ -25,7 +25,7 @@
         </div>
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Teléfono" formControlName="telefono" type="number">
+            <input matInput placeholder="Teléfono" formControlName="telefono">
             <mat-error *ngIf="addressForm.controls['telefono'].hasError('required')">
               El teléfono es <strong>requerido</strong>
             </mat-error>
@@ -43,7 +43,7 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" [disabled]="botonDeshabilitado">Enviar</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="addressForm.invalid">Enviar</button>
     </mat-card-actions>
   </mat-card>
 </form>
