--- a/src/app/empresas/empresas-formulario/empresas-formulario.component.html
+++ b/src/app/empresas/empresas-formulario/empresas-formulario.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (change)="onChange();" (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Información de la Empresa</mat-card-title>
@@ -7,8 +7,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Nombre de la Empresa" formControlName="nombre">
-            <mat-error *ngIf="addressForm.controls['nombre'].hasError('required')">
+            <input matInput placeholder="Nombre de la Empresa" formControlName="razon_social">
+            <mat-error *ngIf="addressForm.controls['razon_social'].hasError('required')">
               El nombre de la empresa es <strong>requerido</strong>
             </mat-error>
           </mat-form-field>
@@ -17,7 +17,7 @@
       
       <div class="col">
         <mat-form-field class="full-width">
-          <input matInput placeholder="NIT" formControlName="nit">
+          <input matInput placeholder="NIT" formControlName="nit" type="number">
           <mat-error *ngIf="addressForm.controls['nit'].hasError('required')">
             NIT es <strong>requerido</strong>
           </mat-error>
@@ -59,8 +59,8 @@
 
       <div class="col">
         <mat-form-field class="full-width">
-          <input matInput placeholder="Correo" formControlName="correo"/>
-          <mat-error *ngIf="addressForm.controls['correo'].hasError('required')">
+          <input matInput placeholder="Correo" formControlName="email"/>
+          <mat-error *ngIf="addressForm.controls['email'].hasError('required')">
             Correo es <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
@@ -83,7 +83,7 @@
       
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" [disabled]="botonDehabilitado" >Enviar</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="addressForm.invalid" >Enviar</button>
     </mat-card-actions>
   </mat-card>
 </form>
