--- a/src/app/mantenimientos/mantenimientos-formulario/mantenimientos-formulario.component.html
+++ b/src/app/mantenimientos/mantenimientos-formulario/mantenimientos-formulario.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="addressForm" novalidate (change)="onChange();" (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>Información del mantenimiento</mat-card-title>
+      <mat-card-title>Información del mantenimiento</mat-card-title>      
     </mat-card-header>
     <mat-card-content>
       <div class="row">
@@ -17,11 +17,9 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <mat-label>Fecha de Ingreso</mat-label>
-            <input matInput [matDatepicker]="picker1" formControlName="ingreso"/>
-            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-            <mat-error *ngIf="addressForm.controls['ingreso'].hasError('required')">
+            <mat-label>Fecha de Entrada</mat-label>
+            <input matInput formControlName="fecha_entrada" type="date">  
+            <mat-error *ngIf="addressForm.controls['fecha_entrada'].hasError('required')">
               La fecha de ingreso es <strong>requerida</strong>
             </mat-error>
           </mat-form-field>
@@ -29,10 +27,8 @@
         <div class="col">
           <mat-form-field class="full-width">
             <mat-label>Fecha de Salida</mat-label>
-            <input matInput [matDatepicker]="picker2" formControlName="ingreso"/>
-            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-            <mat-datepicker #picker2></mat-datepicker>
-            <mat-error *ngIf="addressForm.controls['salida'].hasError('required')">
+            <input matInput formControlName="fecha_salida" type="date"/>            
+            <mat-error *ngIf="addressForm.controls['fecha_salida'].hasError('required')">
               La fecha de salida es <strong>requerida</strong>
             </mat-error>
           </mat-form-field>
@@ -42,26 +38,19 @@
       <div class="row">        
         <div class="col">
           <mat-form-field class="full-width">
-            <mat-select placeholder="Equipo" formControlName="equipo">
-              <mat-option *ngFor="let equipo of equipos" [value]="equipo.abbreviation">
-                {{ equipo.name }}
-              </mat-option>
-            </mat-select>
+            <input matInput placeholder="Equipo" formControlName="equipo" type="number">
             <mat-error *ngIf="addressForm.controls['equipo'].hasError('required')">
               El equipo es <strong>requerido</strong>
             </mat-error>
           </mat-form-field>
         </div>
       </div>
+
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <mat-select placeholder="Técnico" formControlName="tecnico">
-              <mat-option *ngFor="let tecnico of tecnicos" [value]="tecnico.abbreviation">
-                {{ tecnico.name }}
-              </mat-option>
-            </mat-select>
-            <mat-error *ngIf="addressForm.controls['tecnico'].hasError('required')">
+            <input matInput placeholder="Técnico" formControlName="empleado" type="number">
+            <mat-error *ngIf="addressForm.controls['empleado'].hasError('required')">
               El técnico es <strong>requerido</strong>
             </mat-error>
           </mat-form-field>
@@ -79,7 +68,8 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" [disabled]="botonDeshabilitado">Enviar</button>
+      <button mat-raised-button color="warn" type="reset">Reset</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="addressForm.invalid">Enviar</button>
     </mat-card-actions>
   </mat-card>
 </form>
