--- a/src/app/mantenimientos/mantenimientos-tabla/mantenimientos-tabla.component.html
+++ b/src/app/mantenimientos/mantenimientos-tabla/mantenimientos-tabla.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title><h1>Mantenimientos</h1></mat-card-title>
+    <button mat-mini-fab color="accent" routerLink="./formulario">+</button>
   </mat-card-header>
   <mat-card-content>
     <div class="mat-elevation-z8">
@@ -51,6 +52,11 @@
         <ng-container matColumnDef="observaciones">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Observaciones</th>
           <td mat-cell *matCellDef="let row">{{row.observaciones}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <button mat-mini-fab *matCellDef="let row" (click)="deleteMantenimiento(row.id)"><mat-icon>delete</mat-icon></button>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
