--- a/src/app/empleados/empleados-tabla/empleados-tabla.component.html
+++ b/src/app/empleados/empleados-tabla/empleados-tabla.component.html
@@ -3,6 +3,7 @@
     <mat-card-title>
       <h1>Empleados</h1>
     </mat-card-title>
+    <button mat-mini-fab routerLink="./formulario"><mat-icon>add</mat-icon></button>
   </mat-card-header>
   <mat-card-content>
 
@@ -36,6 +37,14 @@
         <ng-container matColumnDef="rol">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
           <td mat-cell *matCellDef="let row">{{row.rol}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-mini-fab (click)="deleteEmpleado(row.id)"><mat-icon>delete</mat-icon></button>
+            <button mat-mini-fab (click)="searchEmpleado(row.id)"><mat-icon>mode_edit</mat-icon></button>
+          </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
