--- a/src/app/empresas/empresas-formulario/empresas-formulario.component.html
+++ b/src/app/empresas/empresas-formulario/empresas-formulario.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
+      <button mat-raised-button color="accent" routerLink=".."><mat-icon>arrow_back</mat-icon></button>
       <mat-card-title>Información de la Empresa</mat-card-title>
     </mat-card-header>
     <mat-card-content>
@@ -83,6 +84,7 @@
       
     </mat-card-content>
     <mat-card-actions>
+      <button mat-raised-button color="warn" type="submit">Reset</button>
       <button mat-raised-button color="primary" type="submit" [disabled]="addressForm.invalid" >Enviar</button>
     </mat-card-actions>
   </mat-card>
