--- a/src/app/empresas/empresas-tabla/empresas-tabla.component.html
+++ b/src/app/empresas/empresas-tabla/empresas-tabla.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>Lista de Empresas</mat-card-title>
+    <button mat-mini-fab routerLink="./formulario"><mat-icon>add</mat-icon></button>
   </mat-card-header>  
   <mat-card-content>
     <div class="mat-elevation-z8">
@@ -51,6 +52,20 @@
         <ng-container matColumnDef="ciudad">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Ciudad</th>
           <td mat-cell *matCellDef="let row">{{row.ciudad}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-mini-fab (click)="deleteEmpresa(row.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+            <button mat-mini-fab (click)="searchEmpresa(row.id)">
+              <mat-icon>
+                mode_edit
+              </mat-icon>
+            </button>
+          </td>
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
