--- a/src/app/equipos/equipos-formulario/equipos-formulario.component.html
+++ b/src/app/equipos/equipos-formulario/equipos-formulario.component.html
@@ -2,6 +2,7 @@
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Información del Equipo</mat-card-title>
+      <button mat-raised-button color="accent" routerLink=".."><mat-icon>arrow_back</mat-icon></button>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
@@ -64,6 +65,7 @@
       </div>      
     </mat-card-content>
     <mat-card-actions>
+      <button mat-raised-button color="warn" type="reset" >Reset</button>
       <button mat-raised-button color="primary" type="submit" [disabled]="addressForm.invalid" >Enviar</button>
     </mat-card-actions>
   </mat-card>
