--- a/src/app/equipos/equipos-tabla/equipos-tabla.component.html
+++ b/src/app/equipos/equipos-tabla/equipos-tabla.component.html
@@ -3,6 +3,9 @@
     <mat-card-title>
       <h1>Equipos</h1>
     </mat-card-title>
+    <button mat-mini-fab routerLink="./formulario">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-card-header>
   <div class="card-content">
     <div class="mat-elevation-z8">
@@ -47,6 +50,14 @@
         <ng-container matColumnDef="observaciones">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Observaciones</th>
           <td mat-cell *matCellDef="let row">{{row.observaciones}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-mini-fab ><mat-icon>delete</mat-icon></button>
+            <button mat-mini-fab ><mat-icon>mode_edit</mat-icon></button>
+          </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
