--- a/src/app/mantenimientos/mantenimientos-formulario/mantenimientos-formulario.component.html
+++ b/src/app/mantenimientos/mantenimientos-formulario/mantenimientos-formulario.component.html
@@ -1,7 +1,10 @@
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>Información del mantenimiento</mat-card-title>      
+      <mat-card-title>Información del mantenimiento</mat-card-title>
+      <button mat-raised-button color="accent" routerLink="..">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
