--- a/src/app/empleados/empleados-formulario/empleados-formulario.component.html
+++ b/src/app/empleados/empleados-formulario/empleados-formulario.component.html
@@ -1,11 +1,12 @@
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
+      <span class="spacer"></span>
+      <button mat-raised-button color="accent" routerLink="..">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
       <mat-card-title>Formulario Empleados</mat-card-title>
     </mat-card-header>
-    <button mat-raised-button color="accent" routerLink="..">
-      <mat-icon>arrow_back</mat-icon>
-    </button>
     <mat-card-content>
       <div class="row">
         <div class="col">
