--- a/src/app/empresas/empresas-tabla/empresas-tabla.component.html
+++ b/src/app/empresas/empresas-tabla/empresas-tabla.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Lista de Empresas</mat-card-title>
+    <mat-card-title>Empresas</mat-card-title>
+    <span class="spacer"></span>
     <button mat-mini-fab routerLink="./formulario"><mat-icon>add</mat-icon></button>
   </mat-card-header>  
   <mat-card-content>
