--- a/src/app/mantenimientos/mantenimientos-tabla/mantenimientos-tabla.component.html
+++ b/src/app/mantenimientos/mantenimientos-tabla/mantenimientos-tabla.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title><h1>Mantenimientos</h1></mat-card-title>
-    <button mat-mini-fab color="accent" routerLink="./formulario">+</button>
+    <button mat-mini-fab color="accent" routerLink="./formulario">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-card-header>
   <mat-card-content>
     <div class="mat-elevation-z8">
