--- a/src/app/empleados/empleados-formulario/empleados-formulario.component.html
+++ b/src/app/empleados/empleados-formulario/empleados-formulario.component.html
@@ -5,7 +5,7 @@
       <button mat-raised-button color="accent" routerLink="..">
         <mat-icon>arrow_back</mat-icon>
       </button>
-      <mat-card-title>Formulario Empleados</mat-card-title>
+      <mat-card-title>Información del Empleado</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
