--- a/src/app/empresas/empresas-tabla/empresas-tabla.component.html
+++ b/src/app/empresas/empresas-tabla/empresas-tabla.component.html
@@ -1,7 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Empresas</mat-card-title>
-    <span class="spacer"></span>
+    <mat-card-title><h1>Empresas</h1></mat-card-title>    
     <button mat-mini-fab routerLink="./formulario"><mat-icon>add</mat-icon></button>
   </mat-card-header>  
   <mat-card-content>
