--- a/src/app/equipos/equipos-formulario/equipos-formulario.component.html
+++ b/src/app/equipos/equipos-formulario/equipos-formulario.component.html
@@ -2,6 +2,7 @@
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Información del Equipo</mat-card-title>
+      <span class="spacer"></span>
       <button mat-raised-button color="accent" routerLink=".."><mat-icon>arrow_back</mat-icon></button>
     </mat-card-header>
     <mat-card-content>
