--- a/src/app/empresas/empresas-formulario/empresas-formulario.component.html
+++ b/src/app/empresas/empresas-formulario/empresas-formulario.component.html
@@ -85,7 +85,7 @@
       
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="warn" type="submit">Reset</button>
+      <button mat-raised-button color="warn" type="reset">Reset</button>
       <button mat-raised-button color="primary" type="submit" [disabled]="addressForm.invalid" >Enviar</button>
     </mat-card-actions>
   </mat-card>
