--- a/src/app/shared/navegacion/navegacion.component.html
+++ b/src/app/shared/navegacion/navegacion.component.html
@@ -5,12 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>
       <img src="https://i.imgur.com/nOLl4iZ.png" alt="logo" width="80%" />      
-    </mat-toolbar>
-    <!-- <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list> -->
+    </mat-toolbar>  
     <app-module-tree></app-module-tree>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -24,7 +19,10 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span class="spacer"></span>
-      <span>smart75</span>
+      <span *ngIf="username.length>0;else user">{{username}}</span>
+      <ng-template #user>
+        <span>smart75</span>
+      </ng-template>
       <mat-icon>account_circle</mat-icon>
     </mat-toolbar>
     <!-- Add Content Here -->
