--- a/src/app/equipos/equipos-tabla/equipos-tabla.component.html
+++ b/src/app/equipos/equipos-tabla/equipos-tabla.component.html
@@ -55,8 +55,8 @@
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let row">
-            <button mat-mini-fab ><mat-icon>delete</mat-icon></button>
-            <button mat-mini-fab ><mat-icon>mode_edit</mat-icon></button>
+            <button mat-mini-fab (click)="deleteEquipo(row.id)"><mat-icon>delete</mat-icon></button>
+            <button mat-mini-fab (click)="searchEquipo(row.id)"><mat-icon>mode_edit</mat-icon></button>
           </td>
         </ng-container>
     
