--- a/src/app/equipos/equipos-formulario/equipos-formulario.component.html
+++ b/src/app/equipos/equipos-formulario/equipos-formulario.component.html
@@ -46,7 +46,13 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Cliente" formControlName="cliente" type="number">
+            <mat-select placeholder="Empresa" formControlName="cliente">
+              <ng-container  *ngFor="let empresa of empresas">
+                <mat-option [value]="empresa.id">
+                  {{ empresa.razon_social }}
+                </mat-option>
+              </ng-container>
+            </mat-select>
             <mat-error *ngIf="addressForm.controls['cliente'].hasError('required')">
               El cliente es <strong>requerido</strong>
             </mat-error>
